[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
repository = "https://git.t1a.cloud/mike.perlov/sas-lexer.git"
authors = ["Mike Perlov <mishamsk@gmail.com>"]
version = "0.1.0"
publish = false

[workspace.dependencies]
sas_lexer = { path = "crates/sas_lexer" }
sas_lexer_macro = { path = "crates/sas_lexer_macro" }

insta = { version = "1.39.0", features = ["yaml"] }
rstest = "0.21.0"
serde = { version = "1.0.204", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# allowed pedantic lints
module_name_repetitions = "allow"
single_match_else = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
unwrap_used = "warn"
