[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "sas-lexer"
version = "0.1.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Private :: Do Not Upload",
]
dependencies = ["msgspec>=0.18.0"]

[dependency-groups]
dev = [
    "mypy[faster-cache]>=1.13.0",
    "pre-commit>=4.0.1",
    "pycases>=0.1.3",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
    "uv>=0.4.27",
]

[tool.maturin]
manifest-path = "crates/sas_lexer_py/Cargo.toml"
module-name = "sas_lexer._sas_lexer_rust"
python-source = "src"
strip = true
profile = "release"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "FBT",
    "I",    # isort
    "B",    # bugbear
    "N",
    "PERF",
    "SLF",
    "PTH",
    "TCH",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "E501",    # line too long, handled by ruff format
    "PLC0105", # We are ok with TypeVars without variance in name
]
