[package]
name = "sas-lexer-cli"
description = "Development CLI for sas-lexer crate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
rust-version = "1.80.0"
version = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[[bin]]
name = "sas-lexer"
path = "src/main.rs"

[dependencies]
sas-lexer = { workspace = true, features = ["opti_stats", "macro_sep"] }
clap = { version = "4.5.10", features = ["derive", "env"] }
walkdir = { workspace = true }
strum = { workspace = true }
polars = { version = "0.43.1", features = [
    "lazy",
    "parquet",
    "fmt",
    "round_series",
], optional = true }
indicatif = "0.17.8"

[dev-dependencies]

[features]
polars = ["dep:polars"]

[package.metadata.release]
release = false
