[package]
name = "sas-lexer-macro"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
authors.workspace = true
version.workspace = true
publish.workspace = true

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"


[lints]
workspace = true
