[package]
name = "sas-lexer-macro"
description = "Internal macro for sas-lexer crate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0"
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.72"


[lints]
workspace = true
