[package]
name = "sas-lexer-py"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
name = "_sas_lexer_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.22.2"
rmp-serde = { workspace = true }
sas-lexer = { workspace = true, features = ["serde", "macro_sep"] }
serde_bytes = "0.11.15"

[build-dependencies]
anyhow = "1.0.91"
sas-lexer = { workspace = true, features = ["serde", "macro_sep"] }
strum = { workspace = true }
convert_case = "0.6.0"

[lints]
workspace = true
