[package]
name = "sas-lexer-py"
description = "Python bindings for sas-lexer crate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = "1.0.0-beta.1"
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = false

[lib]
name = "_sas_lexer_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.22.2"
rmp-serde = { workspace = true }
sas-lexer = { version = "1.0.0-beta.3", features = ["serde", "macro_sep"] }
serde_bytes = "0.11.15"

[build-dependencies]
anyhow = "1.0.91"
sas-lexer = { version = "1.0.0-beta.3", features = ["serde", "macro_sep"] }
strum = { workspace = true }
convert_case = "0.6.0"

[lints]
workspace = true

[package.metadata.release]
release = false
