[package]
name = "sas_lexer"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[dependencies]
is-macro = { workspace = true }
phf = { workspace = true }
rmp-serde = { workspace = true }
sas_lexer_macro = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smol_str = "0.2.2"
strum = { workspace = true }
unicode-ident = "1.0.12"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
