[package]
name = "sas_lexer"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[dependencies]
phf = { workspace = true }
sas_lexer_macro = { workspace = true }
rmp-serde = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_repr = { version = "0.1.19", optional = true }
strum = { workspace = true }
unicode-ident = "1.0.12"
lexical = { version = "7.0.2", default-features = false, features = ["std", "power-of-two", "parse-floats", "parse-integers", "format"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true }
rstest = { workspace = true }
zip = { workspace = true }
walkdir = { workspace = true }
pprof = { workspace = true, features = ["flamegraph", "criterion"] }

[features]
serde = ["dep:serde", "dep:rmp-serde", "dep:serde_repr"]

[lints]
workspace = true

[[bench]]
name = "lexer"
harness = false
