[package]
name = "sas_lexer_cli"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[[bin]]
name = "sas-lexer"
path = "src/main.rs"

[dependencies]
sas_lexer = { workspace = true }
clap = { version = "4.5.10", features = ["derive", "env"] }
walkdir = { workspace = true }
strum = { workspace = true }
convert_case = "0.6.0"
polars = { version = "0.43.1", features = [
    "lazy",
    "parquet",
    "fmt",
    "round_series",
] }
indicatif = "0.17.8"

[dev-dependencies]

[lints]
workspace = true
