[package]
name = "sas_lexer_py"
authors = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
name = "_sas_lexer_rust"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.22.2"
rmp-serde.workspace = true
sas_lexer = { workspace = true, features = ["serde", "macro_sep"] }
serde_bytes = "0.11.15"


[dev-dependencies]

[lints]
workspace = true
